force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationAccess__c/SVMXA360__CONF_MobileConfigurationAccess__c.object-meta.xml
<CustomObject>
    <description>This object stores Profile or User configurations for the Mobile configuration.</description>
    <label>A360 Mobile Configuration Access</label>
    <nameField>
        <displayFormat>MCA-{00000}</displayFormat>
        <label>Mobile Configuration Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A360 Mobile Configuration Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>