force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationAccess__c/fields/SVMXA360__MobileConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MobileConfigurationId__c</fullName>
    <description>The master-detail lookup to the Mobile configuration object.</description>
    <label>Mobile Configuration</label>
    <referenceTo>SVMXA360__CONF_MobileConfiguration__c</referenceTo>
    <relationshipLabel>A360 Mobile Configuration Accesses</relationshipLabel>
    <relationshipName>A360_MobileConfigurationAccesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>