force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationAccess__c/fields/SVMXA360__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProfileId__c</fullName>
    <description>This has the Salesforce Id of the Profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>