force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationAccess__c/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This has the Salesforce Id of the User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>A360_MobileConfigurationAccesses</relationshipName>
    <type>Lookup</type>
</CustomField>